# beans

./: README.md  pyproject.toml
.claude/skills/project-review/: SKILL.md
.claude/skills/project-review/references/: templates.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
backlog/: 001-import-dedupe-silent-drop.md  002-closed-account-posting-guard.md  003-export-void-asymmetry.md  004-consolidate-list-json.md  005-financial-math-tests.md  006-compare-all-period-ux.md  007-dedupe-foreign-sign-helper.md
beans/: __init__.py  __main__.py  analysis.py  budget.py  cli.py  completions.py  economic.py  export.py  forecast.py  fx.py  goals.py  importer.py  invest.py  ledger.py  loans.py  models.py  reconcile.py  recurring.py  render.py  reports.py  restore.py  status.py  utils.py
beans/_toolcore/: __init__.py  bundle.py  runner.py
beans/ai/: __init__.py  ask.py  client.py  config.py  prompts.py  redaction.py  review.py  runner.py  tools.py
beans/mcp/: __init__.py  __main__.py  doctor.py  server.py
docs/: MANUAL.md  mcp-setup-wsl.md  project_review_20260616.md
docs/vignettes/: 01-getting-started.md  02-budgeting-a-month.md  03-import-and-reconcile.md  04-recurring-goals-investing.md  05-loans-and-liquidity.md  06-economic-balance-sheet.md  07-ai-assistant.md  08-mcp.md  README.md  sample-bank.csv
scripts/: bump_version.py
tests/: conftest.py  test_ai.py  test_analysis.py  test_bump_version.py  test_cli.py  test_economic.py  test_export.py  test_forecast.py  test_fx.py  test_goals.py  test_importer.py  test_invest.py  test_ledger.py  test_loans.py  test_mcp.py  test_reconcile.py  test_recurring.py  test_reports.py  test_restore.py  test_status.py  test_utils.py
