[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beans"
dynamic = ["version"]
description = "Professional-grade double-entry accounting for personal finance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["accounting", "finance", "double-entry", "budgeting", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.scripts]
beans = "beans.cli:main"

[project.urls]
Homepage = "https://github.com/rtrimble13/beans"
Repository = "https://github.com/rtrimble13/beans"
Issues = "https://github.com/rtrimble13/beans/issues"

[project.optional-dependencies]
dev = ["pytest"]
release = ["build", "twine"]

[tool.setuptools.dynamic]
version = { attr = "beans.__version__" }

[tool.setuptools.packages.find]
include = ["beans*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
