[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The import package and CLI command are both
# `beans`; the PyPI name is `beans-ledger` because `beans` was already taken.
name = "beans-ledger"
dynamic = ["version"]
description = "Professional-grade double-entry accounting for personal finance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["accounting", "finance", "double-entry", "budgeting", "cli",
            "ai", "llm"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.scripts]
beans = "beans.cli:main"

[project.urls]
Homepage = "https://github.com/rtrimble13/beans"
Repository = "https://github.com/rtrimble13/beans"
Issues = "https://github.com/rtrimble13/beans/issues"
PyPI = "https://pypi.org/project/beans-ledger/"

[project.optional-dependencies]
# The AI assistant is opt-in and adds NO third-party dependency: the client
# uses the standard library (urllib). The extra exists as the install-time
# opt-in signal and a place to hang any future AI-only dependency; it also
# keeps the network-capable code discoverable behind a flag the user chooses.
ai = []
dev = ["pytest"]
release = ["build", "twine"]
# Convenience aggregate.
all = ["beans-ledger[ai]"]

[tool.setuptools.dynamic]
version = { attr = "beans.__version__" }

[tool.setuptools.packages.find]
include = ["beans*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: exercises a real LLM provider; skipped by default"]
addopts = "-m 'not live'"
